--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <title>TURRIS ALBA</title>
 </head>
 <body>
-    
+    <header>
+        <h1>TURRIS ALBA</h1>
+        <h2>The white spire</h2>
+    </header>
+    <main>
+        <div>
+            <h2>Music that touches your heart.</h2>
+            <p>TURRIS ALBA offers an arcane, emotional audiovisual experience to the listener, combining different genres of music in a unique style. it consists of:</p>
+            <li>
+                <ul>A mix of synthetic and acoustic musical instruments accompanying each other.</ul>
+                <ul>A hard-hitting beat.</ul>
+                <ul>Intricate, evolving melodies.</ul>
+            </li>
+            <p>Check out the latest track to hear it for yourself:</p>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KcGvvJSh198" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div>
+           
+            <table>
+                <thead><h2>List of all releases</h2></thead>
+                <tbody>
+                    <tr>
+                        <th>Name</th>
+                        <th>Release date</th>
+                        <th>Link</th>
+                    </tr>
+                    <tr>
+                        <td>BEASTSLAYER</td>
+                        <td>September 2022</td>
+                        <td><a href="https://youtu.be/KcGvvJSh198">Listen on YouTube</a></td>
+                    </tr>
+                    <tr>
+                        <td>Rightful</td>
+                        <td>August 2022</td>
+                        <td><a href="https://youtu.be/2-N2Cct73Pc">Listen on YouTube</a></td>
+                    </tr>
+                    <tr>
+                        <td>Spirit of the White Forest</td>
+                        <td>May 2022</td>
+                        <td><a href="https://youtu.be/0pvuxFYuA3c">Listen on YouTube</a></td>
+                    </tr>
+                    <tr>
+                        <td>Path to Self</td>
+                        <td>April 2022</td>
+                        <td><a href="https://youtu.be/TyYeQxzq89M">Listen on YouTube</a></td>
+                    </tr>
+                    <tr>
+                        <td>FROZENSOUL</td>
+                        <td>February 2022</td>
+                        <td><a href="https://youtu.be/N33gySOP6Jo">Listen on YouTube</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
