--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div>
             <h2>Music that touches your heart.</h2>
             <p>TURRIS ALBA offers an arcane, emotional audiovisual experience to the listener, combining different genres of music in a unique style. it consists of:</p>
-            <li>
-                <ul>A mix of synthetic and acoustic musical instruments accompanying each other.</ul>
-                <ul>A hard-hitting beat.</ul>
-                <ul>Intricate, evolving melodies.</ul>
-            </li>
+            <ul>
+                <li>A mix of synthetic and acoustic musical instruments accompanying each other.</li>
+                <li>A hard-hitting beat.</li>
+                <li>Intricate, evolving melodies.</li>
+            </ul>
             <p>Check out the latest track to hear it for yourself:</p>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KcGvvJSh198" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
